# mip-deployment

./: .env  .gitignore  .gitmodules  .mipenv  .versions_env  Advanced_doc.md  MIP-DEPLOYMENT.md  MIP-LOCAL-DEPLOYMENT.md  Mip-local-deployment  README.md  after-git-clone.sh  ci.sh  docker-compose-ci.yml  docker-compose-federation.yml  docker-compose.yml  federation_info.py  local_deployment.sh  mip  pathologies_generator.py  run-distributed.sh  run-federation.sh  run.sh  stop.sh
.circleci/: config.yml
Federation/: README.md  cleanUp.sh  docker-compose.yml  run.sh  stop.sh
certs/: tls.crt
config/: check_env_variabe_IP.sh  configure_keycloak.sh  convert-csv-dataset-to-db.py  db_clean.sh  disabledAlgorithms.json  get_env_variable_IP.sh  keycloak.json  pathologies.json  pathologies_generator.py
data/: mentalhealth_cdes_v5.json  pathologies.json
dementia/: datasets.csv
dev/: .versions_env  docker-compose.yml  requirements.txt  start.sh  stop.sh  test.sh
dev_deployment/: README.md  docker-compose.yml  start.sh  stop.sh  test.sh
doc/: BackupAndRecovery.md  (+7 more)
tests/backend_components/: docker-compose.yml  pyproject.toml  tasks.py
tests/backend_components/test_integration/: test_federation_info.py
tests/backend_components/test_integration/test_fail_cases/: test_exareme2_post_experiment_fail.py  test_exareme_post_experiment_fail.py
tests/backend_components/test_integration/test_success_cases/: test_exareme2_post_experiment.py  test_exareme_post_experiment.py  test_get_algorithms_request.py  test_get_pathologies_request.py  test_mipengine_post_experiment.py
(+213 files in other folders)
