[tool.poetry]
name = "mip-deployment-test"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pytest = "6.2.4"
requests = "2.25.1"
flake8 = "3.9.2"
pymonetdb = "~1.6"

[tool.poetry.dev-dependencies]
mipdb = "2.0.4"
invoke = "^1.7.1"

